--- a/index.html
+++ b/index.html
@@ -24,13 +24,19 @@
             border-color: Black;
             border-style: solid;
         }
+        .TextBorder
+        {
+            border: 2px;
+            border-color: Black;
+            border-style: solid;
+        }
         ul {display: table; margin: 0 auto; text-align: left;}
     </style>
 </head>
 <body>
     <div class="headpic">
         <img src="my_photo.jpg" alt="My_Picture.com" width="149" height="162" class="ImageBorder"/>
-        <p style="font-size: 150%;font-family: Verdana;background-color: gainsboro;color: darkblue;" class="ImageBorder">Konstandinos Kotsiopoulos</p>
+        <p style="font-size: 150%;font-family: Verdana;background-color: gainsboro;color: darkblue;" class="TextBorder">Konstandinos Kotsiopoulos</p>
         <p>
             <a href="index.html" style="font-size: 135%; color:darkorange;">Home</a>
             <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
