--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             border: 2px;
             border-color: Black;
             border-style: solid;
-            padding: 0%;
+            padding: 1px;
         }
         ul {display: table; margin: 0 auto; text-align: left;}
     </style>
