--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             border-color: Black;
             border-style: solid;
             padding: 1px;
+            margin: 1px;
         }
         ul {display: table; margin: 0 auto; text-align: left;}
     </style>
