--- a/cv.html
+++ b/cv.html
@@ -26,13 +26,21 @@
             font-size: 135%;
             text-decoration: underline;
         }
+        .TextBorder
+        {
+            border: 2px;
+            border-color: Black;
+            border-style: solid;
+            padding: 1px;
+            margin: 1px;
+        }
         ul {display: table; margin: 0 auto; text-align: left;}
     </style>
 </head>
 <body>
     <div class="headpic">
         <img src="my_photo.jpg" alt="My_Picture.com" width="149" height="162" class="ImageBorder"/>
-        <p style="font-size: 150%;font-family: Verdana;">Konstandinos Kotsiopoulos</p>
+        <p style="font-size: 150%;font-family: Verdana;background-color: gainsboro;color: darkblue;" class="TextBorder">Konstandinos Kotsiopoulos</p>
         <p>
             <a href="index.html" style="font-size: 120%; color:plum;">Home</a>
             <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
