--- a/research.html
+++ b/research.html
@@ -26,12 +26,20 @@
             font-size: 135%;
             text-decoration: underline;
         }
+        .TextBorder
+        {
+            border: 2px;
+            border-color: Black;
+            border-style: solid;
+            padding: 1px;
+            margin: 1px;
+        }
     </style>
 </head>
 <body>
     <div class="headpic">
         <img src="my_photo.jpg" alt="My_Picture.com" width="149" height="162" class="ImageBorder"/>
-        <p style="font-size: 150%;font-family: Verdana;">Konstandinos Kotsiopoulos</p>
+        <p style="font-size: 150%;font-family: Verdana;background-color: gainsboro;color: darkblue;" class="TextBorder">Konstandinos Kotsiopoulos</p>
         <p>
             <a href="index.html" style="font-size: 120%; color:plum;">Home</a>
             <a href="research.html" style="font-size: 135%; color: darkorange;">Research</a>
