--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,11 @@
         div {
             text-align: center;
         }
+        h3 {
+            text-decoration-line: underline;
+            font-family: Bahnschrift;
+            text-align:center;
+        }
         .headpic {
           background-color: rgb(28, 110, 135);
           color: white;
@@ -47,7 +52,7 @@
             <a href="cv.html" style="font-size: 135%; color: darkorange;">CV</a>
         </p>
     </div>
-    <h3 style="text-align:center;">Education</h3>
+    <h3>Education</h3>
     <ul>
         <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span style="margin-left:0.9em"></span> 2013 - 2018</li>
         <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span style="margin-left:0.9em"></span> 2013 - 2015</li>
@@ -57,12 +62,12 @@
 
     <hr>
 
-    <h3 style="text-align:center;">Technical Proficiencies</h3>
+    <h3>Technical Proficiencies</h3>
     <p style="text-align:center;">C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages. LaTeX and HTML scripting tools</p>
 
     <hr>
 
-    <h3 style="text-align:center;">Work/Research experience</h3>
+    <h3>Work/Research experience</h3>
 
     <ul>
     <p style="text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
@@ -79,7 +84,7 @@
 
     <hr>
 
-    <h3 style="text-align:center;">Teaching Experience</h3>
+    <h3>Teaching Experience</h3>
     <p style="text-align:center;"><strong>Department of Mathematics and Statistics, Mount Holyoke College</strong>, 2017</p>
     <p style="padding-left:30px;text-align:center;">−MATH 102: Calculus II</p>
     <p style="text-align:center;"><strong>Department of Mathematics and Statistics, University of Massachusetts Amherst</strong>, 2013 - 2018</p>
@@ -96,7 +101,7 @@
 
     <hr>
 
-    <h3 style="text-align:center;">Contributed Talks</h3>
+    <h3>Contributed Talks</h3>
     <ul>
         <li>WINRS: A Meeting of Mathematical Minds, Brown University, “<em>Asymptotic behavior of the random logistic model</em>”, March 2017</li>
         <li>Applied Analysis and Computation Seminar, University of Massachusetts Amherst, “<em>Asymptotic behavior of the random logistic model</em>”, November 2016</li>
@@ -105,7 +110,7 @@
 
     <hr>
 
-    <h3 style="text-align:center;">Additional conferences attended</h3>
+    <h3>Additional conferences attended</h3>
     <ul>
         <li>H2O World New York, October 2019</li>
         <li>Biostatistics in Practice: Data Sciences for the Life Sciences in a High Performance Computing Environment, one-day workshop at MGHPCC, February 2014</li>
@@ -113,7 +118,7 @@
 
     <hr>
 
-    <h3 style="text-align:center;">Awards and Honors</h3>
+    <h3>Awards and Honors</h3>
     <ul>
         <li><em>President's award</em>, Discover Financial Services <span style="margin-left:9.59em"></span> March 2022</li>
         <li><em>Excellence award</em>, Discover Financial Services <span style="margin-left:9.64em"></span> November 2020</li>
@@ -123,7 +128,7 @@
 
     <hr>
 
-    <h3 style="text-align:center;">Other Information</h3>
+    <h3>Other Information</h3>
     <ul>
         <li>Dual citizenship (U.S. and Greek)</li>
         <li>Fluent in English and Greek</li>
