--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
             text-align: center;
         }
         p {
-            margin-right: 200px;
-            margin-left: 200px;
+            margin-right: 100px;
+            margin-left: 100px;
         }
         h3 {
             text-decoration-line: underline;
@@ -37,7 +37,7 @@
             padding: 1px;
             margin: 1px;
         }
-        ul {display: table; margin: 0 auto; text-align: left;}
+        /* ul {display: table; margin: 0 auto; text-align: left;} */
     </style>
 </head>
 <body>
