--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             padding: 1px;
             margin: 1px;
         }
-        /* ul {display: table; margin: 0 auto; text-align: left;} */
+        ul {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
