--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             margin: 1px;
         }
         ul {
-            margin-left: 300px;
+            margin: auto;
         }
     </style>
 </head>
