--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             margin: 1px;
         }
         ul {
-            margin: auto;
+            display: inline-block;
+            text-align: left;
         }
     </style>
 </head>
@@ -62,9 +63,11 @@
     <hr>
 
     <h3>Contact</h3>
-    <ul>
-         <li> <b>Email</b>: kkotsiop AT gmail(dot)com</li>
-         <li> <b>LinkedIn</b>: https://www.linkedin.com/in/konstandinos-kotsiopoulos-76742373</li>
-    </ul>
+    <div>
+        <ul>
+            <li> <b>Email</b>: kkotsiop AT gmail(dot)com</li>
+            <li> <b>LinkedIn</b>: https://www.linkedin.com/in/konstandinos-kotsiopoulos-76742373</li>
+        </ul>
+    </div>
 </body>
 </html>
