--- a/research.html
+++ b/research.html
@@ -39,6 +39,10 @@
             padding: 1px;
             margin: 1px;
         }
+        ul {
+            margin-right: 100px;
+            margin-left: 100px;
+        }
     </style>
 </head>
 <body>
