--- a/research.html
+++ b/research.html
@@ -39,7 +39,7 @@
             padding: 1px;
             margin: 1px;
         }
-        ul {
+        ol {
             margin-right: 100px;
             margin-left: 100px;
         }
@@ -56,13 +56,15 @@
         </p>
     </div>
     <h3>Research Interests</h3>
-    <ul>
-        <li>Probability theory: <em>limit theorems for Markov chains, large deviation theory, stochastic
-    processes and stochastic ODEs</em></li>
-        <li>Dynamical systems and ergodic theory</li>
-        <li>Statistics with applications to data science</li>
-        <li>Machine Learning interpretability</li>
-    </ul>
+    <div>
+        <ul>
+            <li>Probability theory: <em>limit theorems for Markov chains, large deviation theory, stochastic
+        processes and stochastic ODEs</em></li>
+            <li>Dynamical systems and ergodic theory</li>
+            <li>Statistics with applications to data science</li>
+            <li>Machine Learning interpretability</li>
+        </ul>
+    </div>
 
     <hr>
 
