--- a/research.html
+++ b/research.html
@@ -43,6 +43,10 @@
             margin-right: 100px;
             margin-left: 100px;
         }
+        ul {
+            display: inline-block;
+            text-align: left;
+        }
     </style>
 </head>
 <body>
