--- a/research.html
+++ b/research.html
@@ -44,7 +44,7 @@
             margin-left: 100px;
         }
         ul {
-            display: inline-block;
+            /* display: inline-block; */
             text-align: left;
         }
     </style>
