--- a/research.html
+++ b/research.html
@@ -44,8 +44,9 @@
             margin-left: 100px;
         }
         ul {
-            /* display: inline-block; */
+            display: inline-block;
             text-align: left;
+            margin: 1px;
         }
     </style>
 </head>
