--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         ul {
             display: inline-block;
             text-align: left;
+            margin-top: 1px;
         }
     </style>
 </head>
