--- a/research.html
+++ b/research.html
@@ -46,7 +46,7 @@
         ul {
             display: inline-block;
             text-align: left;
-            margin: 1px;
+            margin-top: 1px;
         }
     </style>
 </head>
