--- a/cv.html
+++ b/cv.html
@@ -39,7 +39,11 @@
             padding: 1px;
             margin: 1px;
         }
-        ul {display: table; margin: 0 auto; text-align: left;}
+        ul {
+            display: inline-block;
+            text-align: left;
+            margin-top: 1px;
+        }
     </style>
 </head>
 <body>
@@ -53,12 +57,14 @@
         </p>
     </div>
     <h3>Education</h3>
-    <ul>
-        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span style="margin-left:0.9em"></span> 2013 - 2018</li>
-        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span style="margin-left:0.9em"></span> 2013 - 2015</li>
-        <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span style="margin-left:1.95em"></span> 2012 - 2013</li>
-        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span style="margin-left:5em"></span> 2008 - 2012</li>
-    </ul>
+    <div>
+        <ul>
+            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="float-right">2013 - 2018</span></li>
+            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span style="margin-left:0.9em"></span> 2013 - 2015</li>
+            <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span style="margin-left:1.95em"></span> 2012 - 2013</li>
+            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span style="margin-left:5em"></span> 2008 - 2012</li>
+        </ul>
+    </div>
 
     <hr>
 
