--- a/cv.html
+++ b/cv.html
@@ -60,16 +60,21 @@
     <div>
         <ul>
             <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="float-right">2013 - 2018</span></li>
-            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span style="margin-left:0.9em"></span> 2013 - 2015</li>
-            <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span style="margin-left:1.95em"></span> 2012 - 2013</li>
-            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span style="margin-left:5em"></span> 2008 - 2012</li>
+            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="float-right">2013 - 2015</span></li>
+            <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="float-right">2012 - 2013</span></li>
+            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class="float-right">2008 - 2012</span></li>
         </ul>
     </div>
 
     <hr>
 
     <h3>Technical Proficiencies</h3>
-    <p style="text-align:center;">C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages. LaTeX and HTML scripting tools</p>
+    <div>
+        <ul>
+            <li>C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</li>
+            <li>LaTeX, HTML, and CSS scripting tools</li>
+        </ul>
+    </div>
 
     <hr>
 
