--- a/cv.html
+++ b/cv.html
@@ -59,10 +59,10 @@
     <h3>Education</h3>
     <div>
         <ul>
-            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="float-right">2013 - 2018</span></li>
-            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="float-right">2013 - 2015</span></li>
-            <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="float-right">2012 - 2013</span></li>
-            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class="float-right">2008 - 2012</span></li>
+            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="float: right">2013 - 2018</span></li>
+            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="float: right">2013 - 2015</span></li>
+            <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="float: right">2012 - 2013</span></li>
+            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class="float: right">2008 - 2012</span></li>
         </ul>
     </div>
 
@@ -72,7 +72,7 @@
     <div>
         <ul>
             <li>C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</li>
-            <li>LaTeX, HTML, and CSS scripting tools</li>
+            <li>LaTeX, HTML and CSS scripting tools</li>
         </ul>
     </div>
 
