--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,12 @@
         div {
             text-align: center;
         }
+        .floatleft {
+            float:left;
+        }
+        .floatright {
+            float:right;
+        }
         h3 {
             text-decoration-line: underline;
             font-family: Bahnschrift;
@@ -57,14 +63,14 @@
         </p>
     </div>
     <h3>Education</h3>
-    <!-- <div> -->
+    <div class="FlexClass">
         <ul>
-            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="float: right">2013 - 2018</span></li>
-            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="float: right">2013 - 2015</span></li>
-            <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="float: right">2012 - 2013</span></li>
-            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class="float: right">2008 - 2012</span></li>
+            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2018</span></li>
+            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2015</span></li>
+            <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="floatright">2012 - 2013</span></li>
+            <li><span class="floatleft"><em>B.Sc. in Mathematics</em>, University of Crete, Greece</span><span class="floatright">2008 - 2012</span></li>
         </ul>
-    <!-- </div> -->
+    </div>
 
     <hr>
 
