--- a/cv.html
+++ b/cv.html
@@ -63,7 +63,7 @@
         </p>
     </div>
     <h3>Education</h3>
-    <div class="FlexClass">
+    <div>
         <ul>
             <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2018</span></li>
             <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2015</span></li>
