--- a/cv.html
+++ b/cv.html
@@ -68,7 +68,7 @@
             <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2018</span></li>
             <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2015</span></li>
             <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="floatright">2012 - 2013</span></li>
-            <li><span class="floatleft"><em>B.Sc. in Mathematics</em>, University of Crete, Greece</span><span class="floatright">2008 - 2012</span></li>
+            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece<span class="floatright">2008 - 2012</span></li>
         </ul>
     </div>
 
