--- a/cv.html
+++ b/cv.html
@@ -31,12 +31,12 @@
             border-color: Black;
             border-style: solid;
         }
-        a:active {
+        /* a:active {
             color: yellow;
             background-color: transparent;
             font-size: 135%;
             text-decoration: underline;
-        }
+        } */
         .TextBorder
         {
             border: 2px;
@@ -45,11 +45,10 @@
             padding: 1px;
             margin: 1px;
         }
-        /* ul {
-            display: inline-block;
-            text-align: left;
-            margin-top: 1px;
-        } */
+        ul {
+            margin-left: 300px;
+            margin-right: 300px;
+        }
     </style>
 </head>
 <body>
