--- a/cv.html
+++ b/cv.html
@@ -31,12 +31,12 @@
             border-color: Black;
             border-style: solid;
         }
-        /* a:active {
+        a:active {
             color: yellow;
             background-color: transparent;
             font-size: 135%;
             text-decoration: underline;
-        } */
+        }
         .TextBorder
         {
             border: 2px;
@@ -58,28 +58,25 @@
         <p>
             <a href="index.html" style="font-size: 120%; color:plum;">Home</a>
             <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
-            <a href="cv.html" style="font-size: 135%; color: darkorange;">CV</a>
+            <!-- <a href="cv.html" style="font-size: 135%; color: darkorange;">CV</a> -->
+            <a href="cv.html">CV</a>
         </p>
     </div>
     <h3>Education</h3>
-    <!-- <div> -->
         <ul>
             <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2018</span></li>
             <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2015</span></li>
             <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="floatright">2012 - 2013</span></li>
             <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class="floatright">2008 - 2012</span></li>
         </ul>
-    <!-- </div> -->
 
     <hr>
 
     <h3>Technical Proficiencies</h3>
-    <div>
-        <ul>
-            <li>C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</li>
-            <li>LaTeX, HTML and CSS scripting tools</li>
-        </ul>
-    </div>
+    <ul>
+        <li>C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</li>
+        <li>LaTeX, HTML and CSS scripting tools</li>
+    </ul>
 
     <hr>
 
