--- a/cv.html
+++ b/cv.html
@@ -37,6 +37,12 @@
             font-size: 135%;
             text-decoration: underline;
         }
+        a:inactive {
+            color: plum;
+            background-color: transparent;
+            font-size: 120%;
+            text-decoration: underline;
+        }
         .TextBorder
         {
             border: 2px;
@@ -56,10 +62,9 @@
         <img src="my_photo.jpg" alt="My_Picture.com" width="149" height="162" class="ImageBorder"/>
         <p style="font-size: 150%;font-family: Verdana;background-color: gainsboro;color: darkblue;" class="TextBorder">Konstandinos Kotsiopoulos</p>
         <p>
-            <a href="index.html" style="font-size: 120%; color:plum;">Home</a>
-            <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
-            <!-- <a href="cv.html" style="font-size: 135%; color: darkorange;">CV</a> -->
-            <a href="cv.html">CV</a>
+            <a href="index.html" class="inactive">Home</a>
+            <a href="research.html" class="inactive">Research</a>
+            <a href="cv.html" class="active">CV</a>
         </p>
     </div>
     <h3>Education</h3>
