--- a/cv.html
+++ b/cv.html
@@ -31,18 +31,12 @@
             border-color: Black;
             border-style: solid;
         }
-        a:active {
+        /* a:active {
             color: yellow;
             background-color: transparent;
             font-size: 135%;
             text-decoration: underline;
-        }
-        a:inactive {
-            color: plum;
-            background-color: transparent;
-            font-size: 120%;
-            text-decoration: underline;
-        }
+        } */
         .TextBorder
         {
             border: 2px;
@@ -52,8 +46,8 @@
             margin: 1px;
         }
         ul {
-            margin-left: 300px;
-            margin-right: 300px;
+            margin-left: 400px;
+            margin-right: 400px;
         }
     </style>
 </head>
@@ -62,9 +56,9 @@
         <img src="my_photo.jpg" alt="My_Picture.com" width="149" height="162" class="ImageBorder"/>
         <p style="font-size: 150%;font-family: Verdana;background-color: gainsboro;color: darkblue;" class="TextBorder">Konstandinos Kotsiopoulos</p>
         <p>
-            <a href="index.html" class="inactive">Home</a>
-            <a href="research.html" class="inactive">Research</a>
-            <a href="cv.html" class="active">CV</a>
+            <a href="index.html" style="font-size: 120%; color:plum;">Home</a>
+            <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
+            <a href="cv.html" style="font-size: 135%; color: darkorange;">CV</a>
         </p>
     </div>
     <h3>Education</h3>
@@ -89,15 +83,15 @@
 
     <ul>
     <p style="text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
-        <li><em>Principal Research Scientist</em> <span style="margin-left:1em"></span> Oct 2022 - Present</li>
-        <li><em>Lead Research Scientist</em> <span style="margin-left:2.8em"></span> Oct 2021 - Oct 2022</li>
-        <li><em>Senior Modeler</em> <span style="margin-left:6.1em"></span> Mar 2021 - Oct 2021</li>
-        <li><em>Modeler</em> <span style="margin-left:8.95em"></span> Aug 2019 - Mar 2021</li>
-        <li><em>Associate Modeler</em> <span style="margin-left:4.9em"></span> Nov 2018 - Aug 2019</li>
+        <li><em>Principal Research Scientist</em> <span class="floatright"></span> Oct 2022 - Present</li>
+        <li><em>Lead Research Scientist</em> <span class="floatright"></span> Oct 2021 - Oct 2022</li>
+        <li><em>Senior Modeler</em> <span class="floatright"></span> Mar 2021 - Oct 2021</li>
+        <li><em>Modeler</em> <span class="floatright"></span> Aug 2019 - Mar 2021</li>
+        <li><em>Associate Modeler</em> <span class="floatright"></span> Nov 2018 - Aug 2019</li>
     <p style="text-align: left;"><b>University of Massachusetts Amherst</b>, MA</p>
-        <li><em>Research Assistant</em> <span style="margin-left:4.85em"></span> Summer 2016</li>
+        <li><em>Research Assistant</em> <span class="floatright"></span> Summer 2016</li>
     <p style="text-align: left;"><b>FORTH - IACM</b>, Crete, Greece</p>
-        <li><em>Student Intern</em> <span style="margin-left:6.7em"></span> Summer 2012</li>
+        <li><em>Student Intern</em> <span class="floatright"></span> Summer 2012</li>
     </ul>
 
     <hr>
