--- a/research.html
+++ b/research.html
@@ -25,12 +25,12 @@
             border-color: Black;
             border-style: solid;
         }
-        a:active {
+        /* a:active {
             color: yellow;
             background-color: transparent;
             font-size: 135%;
             text-decoration: underline;
-        }
+        } */
         .TextBorder
         {
             border: 2px;
