--- a/cv.html
+++ b/cv.html
@@ -62,12 +62,12 @@
         </p>
     </div>
     <h3>Education</h3>
-        <ul>
-            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2018</span></li>
-            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2015</span></li>
-            <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="floatright">2012 - 2013</span></li>
-            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class="floatright">2008 - 2012</span></li>
-        </ul>
+    <ul>
+        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2018</span></li>
+        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2015</span></li>
+        <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="floatright">2012 - 2013</span></li>
+        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class="floatright">2008 - 2012</span></li>
+    </ul>
 
     <hr>
 
@@ -83,15 +83,15 @@
 
     <ul>
     <p style="text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
-        <li><em>Principal Research Scientist</em> <span class="floatright"></span> Oct 2022 - Present</li>
-        <li><em>Lead Research Scientist</em> <span class="floatright"></span> Oct 2021 - Oct 2022</li>
-        <li><em>Senior Modeler</em> <span class="floatright"></span> Mar 2021 - Oct 2021</li>
-        <li><em>Modeler</em> <span class="floatright"></span> Aug 2019 - Mar 2021</li>
-        <li><em>Associate Modeler</em> <span class="floatright"></span> Nov 2018 - Aug 2019</li>
+        <li><em>Principal Research Scientist</em> <span class="floatright">Oct 2022 - Present</span></li>
+        <li><em>Lead Research Scientist</em> <span class="floatright">Oct 2021 - Oct 2022</span></li>
+        <li><em>Senior Modeler</em> <span class="floatright">Mar 2021 - Oct 2021</span></li>
+        <li><em>Modeler</em> <span class="floatright">Aug 2019 - Mar 2021</span></li>
+        <li><em>Associate Modeler</em> <span class="floatright">Nov 2018 - Aug 2019</span></li>
     <p style="text-align: left;"><b>University of Massachusetts Amherst</b>, MA</p>
-        <li><em>Research Assistant</em> <span class="floatright"></span> Summer 2016</li>
+        <li><em>Research Assistant</em> <span class="floatright">Summer 2016</span></li>
     <p style="text-align: left;"><b>FORTH - IACM</b>, Crete, Greece</p>
-        <li><em>Student Intern</em> <span class="floatright"></span> Summer 2012</li>
+        <li><em>Student Intern</em> <span class="floatright">Summer 2012</span></li>
     </ul>
 
     <hr>
