--- a/cv.html
+++ b/cv.html
@@ -7,9 +7,9 @@
         div {
             text-align: center;
         }
-        .floatleft {
+        /* .floatleft {
             float:left;
-        }
+        } */
         .floatright {
             float:right;
         }
@@ -97,19 +97,21 @@
     <hr>
 
     <h3>Teaching Experience</h3>
-    <p style="text-align:center;"><strong>Department of Mathematics and Statistics, Mount Holyoke College</strong>, 2017</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 102: Calculus II</p>
-    <p style="text-align:center;"><strong>Department of Mathematics and Statistics, University of Massachusetts Amherst</strong>, 2013 - 2018</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 131: Calculus I</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 132: Calculus II (discussion leader)</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 132H: Honors Calculus II (discussion leader)</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 233: Multivariate Calculus</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 331: Ordinary Differential Equations for Scientists and Engineers</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 456: Mathematical Modeling (discussion leader)</p>
-    <p style="padding-left:30px;text-align:center;">−STAT 240: Intro to Statistics (discussion leader &amp; online TA)</p>
-    <p style="padding-left:30px;text-align:center;">−STAT 501: Methods of Applied Statistics (TA)</p>
-    <p style="text-align:center;"><strong>Department of Mathematics, University of Crete, Greece</strong>, 2011 - 2012</p>
-    <p style="padding-left:30px;text-align:center;">−MEM-262: Parametric Statistics (discussion leader)</p>
+    <ul>
+    <p><strong>Department of Mathematics and Statistics, Mount Holyoke College</strong>, 2017</p>
+    <li>MATH 102: Calculus II</li>
+    <p><strong>Department of Mathematics and Statistics, University of Massachusetts Amherst</strong>, 2013 - 2018</p>
+    <li>MATH 131: Calculus I</li>
+    <li>MATH 132: Calculus II (discussion leader)</li>
+    <li>MATH 132H: Honors Calculus II (discussion leader)</li>
+    <li>MATH 233: Multivariate Calculus</li>
+    <li>MATH 331: Ordinary Differential Equations for Scientists and Engineers</li>
+    <li>MATH 456: Mathematical Modeling (discussion leader)</li>
+    <li>STAT 240: Intro to Statistics (discussion leader &amp; online TA)</li>
+    <li>STAT 501: Methods of Applied Statistics (TA)</li>
+    <p><strong>Department of Mathematics, University of Crete, Greece</strong>, 2011 - 2012</p>
+    <li>MEM-262: Parametric Statistics (discussion leader)</li>
+    </ul>
 
     <hr>
 
@@ -132,18 +134,21 @@
 
     <h3>Awards and Honors</h3>
     <ul>
-        <li><em>President's award</em>, Discover Financial Services <span style="margin-left:9.59em"></span> March 2022</li>
-        <li><em>Excellence award</em>, Discover Financial Services <span style="margin-left:9.64em"></span> November 2020</li>
-        <li><em>"STYLIANOS K. PICHORIDES" award</em>, University of Crete, Greece <span style="margin-left:1em"></span> June 2012</li>
-        <li><em>Scholarship award</em>, State Scholarships Foundation (IKY) <span style="margin-left:5.5em"></span> 2009 - 2010</li>
+        <li><em>President's award</em>, Discover Financial Services <span class="floatright"></span> March 2022</li>
+        <li><em>Excellence award</em>, Discover Financial Services <span class="floatright"></span> November 2020</li>
+        <li><em>"STYLIANOS K. PICHORIDES" award</em>, University of Crete, Greece <span class="floatright"></span> June 2012</li>
+        <li><em>Scholarship award</em>, State Scholarships Foundation (IKY) <span class="floatright"></span> 2009 - 2010</li>
     </ul>
 
     <hr>
 
     <h3>Other Information</h3>
-    <ul>
-        <li>Dual citizenship (U.S. and Greek)</li>
-        <li>Fluent in English and Greek</li>
-    </ul>
+    <div>
+        <ul>
+            <li>Dual citizenship (U.S. and Greek)</li>
+            <li>Fluent in English and Greek</li>
+        </ul>
+    </div>
+
 </body>
 </html>
