--- a/cv.html
+++ b/cv.html
@@ -144,7 +144,7 @@
 
     <h3>Other Information</h3>
     <div>
-        <ul class="display: inline-block; margin-top: 1px;">
+        <ul style="display: inline-block; margin-top: 1px;">
             <li>Dual citizenship (U.S. and Greek)</li>
             <li>Fluent in English and Greek</li>
         </ul>
