--- a/cv.html
+++ b/cv.html
@@ -134,10 +134,10 @@
 
     <h3>Awards and Honors</h3>
     <ul>
-        <li><em>President's award</em>, Discover Financial Services <span class="floatright"></span> March 2022</li>
-        <li><em>Excellence award</em>, Discover Financial Services <span class="floatright"></span> November 2020</li>
-        <li><em>"STYLIANOS K. PICHORIDES" award</em>, University of Crete, Greece <span class="floatright"></span> June 2012</li>
-        <li><em>Scholarship award</em>, State Scholarships Foundation (IKY) <span class="floatright"></span> 2009 - 2010</li>
+        <li><em>President's award</em>, Discover Financial Services <span class="floatright">March 2022</span></li>
+        <li><em>Excellence award</em>, Discover Financial Services <span class="floatright">November 2020</span></li>
+        <li><em>"STYLIANOS K. PICHORIDES" award</em>, University of Crete, Greece <span class="floatright">June 2012</span></li>
+        <li><em>Scholarship award</em>, State Scholarships Foundation (IKY) <span class="floatright">2009 - 2010</span></li>
     </ul>
 
     <hr>
