--- a/cv.html
+++ b/cv.html
@@ -117,17 +117,17 @@
 
     <h3>Contributed Talks</h3>
     <ul>
-        <li>WINRS: A Meeting of Mathematical Minds, Brown University, “<em>Asymptotic behavior of the random logistic model</em>”<span class="floatright">March 2017</span></li>
-        <li>Applied Analysis and Computation Seminar, University of Massachusetts Amherst, “<em>Asymptotic behavior of the random logistic model</em>”<span class="floatright">November 2016</span></li>
-        <li>Applied Math Days, Rensselaer Polytechnic Institute, “<em>Asymptotic behavior of the invariant density of the random logistic model</em>”<span class="floatright">April 2016</span></li>
+        <li>WINRS: A Meeting of Mathematical Minds, Brown University, “<em>Asymptotic behavior of the random logistic model</em>”, March 2017</li>
+        <li>Applied Analysis and Computation Seminar, University of Massachusetts Amherst, “<em>Asymptotic behavior of the random logistic model</em>”, November 2016</li>
+        <li>Applied Math Days, Rensselaer Polytechnic Institute, “<em>Asymptotic behavior of the invariant density of the random logistic model</em>”, April 2016</li>
     </ul>
 
     <hr>
 
     <h3>Additional conferences attended</h3>
     <ul>
-        <li>H2O World New York<span class="floatright">October 2019</span></li>
-        <li>Biostatistics in Practice: Data Sciences for the Life Sciences in a High Performance Computing Environment, one-day workshop at MGHPCC<span class="floatright">February 2014</span></li>
+        <li>H2O World New York, October 2019</li>
+        <li>Biostatistics in Practice: Data Sciences for the Life Sciences in a High Performance Computing Environment, one-day workshop at MGHPCC, February 2014</li>
     </ul>
 
     <hr>
