--- a/cv.html
+++ b/cv.html
@@ -73,8 +73,8 @@
 
     <h3>Technical Proficiencies</h3>
     <ul>
-        <li>C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</li>
-        <li>LaTeX, HTML and CSS scripting tools</li>
+        <li><b>Programming languages</b>: C/C++, Java, Python, R, FORTRAN, MATLAB and Mathematica</li>
+        <li><b>Markup languages</b>: LaTeX, HTML and CSS</li>
     </ul>
 
     <hr>
@@ -144,7 +144,7 @@
 
     <h3>Other Information</h3>
     <div>
-        <ul style="display: inline-block; margin-top: 1px;">
+        <ul style="display: inline-block; margin-top: 1px; text-align: left;">
             <li>Dual citizenship (U.S. and Greek)</li>
             <li>Fluent in English and Greek</li>
         </ul>
