--- a/cv.html
+++ b/cv.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kostas' page</title>
     <link rel="icon" type="image/jpg" href="favicon.jpg">
     <style>
         div {
             text-align: center;
         }
-        .floatleft {
+        /* .floatleft {
             float:left;
-        }
+        } */
         .floatright {
             float:right;
         }
