--- a/cv.html
+++ b/cv.html
@@ -8,15 +8,15 @@
         div {
             text-align: center;
         }
-        .menu {
-            width: 25%;
+        .categ {
+            width: 75%;
             float: left;
             padding: 15px;
             border: 1px solid red;
         }
 
-        .main {
-            width: 75%;
+        .dates {
+            width: 25%;
             float: left;
             padding: 15px;
             border: 1px solid red;
@@ -53,10 +53,10 @@
             padding: 1px;
             margin: 1px;
         }
-        ul {
+        /* ul {
             margin-left: 400px;
             margin-right: 400px;
-        }
+        } */
     </style>
 </head>
 <body>
@@ -70,7 +70,7 @@
         </p>
     </div>
     <h3>Education</h3>
-    <div class="menu">
+    <div class="categ">
         <ul>
             <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst</li>
             <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst</li>
@@ -79,7 +79,7 @@
         </ul>
     </div>
 
-    <div class="main">
+    <div class="dates">
         <ul>
             <li>2013 - 2018</li>
             <li>2013 - 2015</li>
