--- a/cv.html
+++ b/cv.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Kostas' page</title>
     <link rel="icon" type="image/jpg" href="favicon.jpg">
     <style>
         div {
             text-align: center;
         }
-        .categ {
-            width: 75%;
-            float: left;
-            padding: 15px;
-            border: 1px solid red;
-        }
-
-        .dates {
-            width: 25%;
-            float: left;
-            padding: 15px;
-            border: 1px solid red;
+        /* .floatleft {
+            float:left;
+        } */
+        .floatright {
+            float:right;
         }
         h3 {
             text-decoration-line: underline;
@@ -53,10 +46,10 @@
             padding: 1px;
             margin: 1px;
         }
-        /* ul {
+        ul {
             margin-left: 400px;
             margin-right: 400px;
-        } */
+        }
     </style>
 </head>
 <body>
@@ -70,23 +63,12 @@
         </p>
     </div>
     <h3>Education</h3>
-    <div class="categ">
-        <ul>
-            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst</li>
-            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst</li>
-            <li><em>Non-degree graduate studies</em>, University of Crete, Greece</li>
-            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece</li>
-        </ul>
-    </div>
-
-    <div class="dates">
-        <ul>
-            <li>2013 - 2018</li>
-            <li>2013 - 2015</li>
-            <li>2012 - 2013</li>
-            <li>2008 - 2012</li>
-        </ul>
-    </div>
+    <ul>
+        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2018</span></li>
+        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2015</span></li>
+        <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="floatright">2012 - 2013</span></li>
+        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class="floatright">2008 - 2012</span></li>
+    </ul>
 
     <hr>
 
