--- a/research.html
+++ b/research.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kostas' page</title>
     <link rel="icon" type="image/jpg" href="favicon.jpg">
     <style>
@@ -43,6 +43,12 @@
         ol {
             margin-right: 100px;
             margin-left: 100px;
+        }
+        @media only screen and (max-width: 600px) {
+            ol {
+                margin-left: 10px;
+                margin-right: 10px;
+            }
         }
         ul {
             display: inline-block;
