--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kostas' page</title>
     <link rel="icon" type="image/jpg" href="favicon.jpg">
     <style>
@@ -11,6 +11,12 @@
         p {
             margin-right: 100px;
             margin-left: 100px;
+        }
+        @media only screen and (max-width: 600px) {
+            p {
+                margin-left: 1px;
+                margin-right: 1px;
+            }
         }
         h3 {
             text-decoration-line: underline;
