--- a/research.html
+++ b/research.html
@@ -44,16 +44,19 @@
             margin-right: 100px;
             margin-left: 100px;
         }
-        @media only screen and (max-width: 600px) {
+        @media only screen and (max-width: 800px) {
             ol {
-                margin-left: 10px;
-                margin-right: 10px;
+                margin-left: 1px;
+                margin-right: 1px;
             }
         }
         ul {
             display: inline-block;
             text-align: left;
             margin-top: 1px;
+        }
+        li.menu-item:not(:last-child) { 
+            margin-bottom: 3px;  
         }
     </style>
 </head>
