--- a/cv.html
+++ b/cv.html
@@ -54,6 +54,7 @@
             ul {
                 margin-left: 1px;
                 margin-right: 1px;
+                text-align: left;
             }
         }
     </style>
