--- a/research.html
+++ b/research.html
@@ -55,7 +55,7 @@
             text-align: left;
             margin-top: 1px;
         }
-        li.menu-item:not(:last-child) { 
+        li:not(:last-of-type) { 
             margin-bottom: 3px;  
         }
     </style>
