--- a/cv.html
+++ b/cv.html
@@ -54,7 +54,7 @@
             ul {
                 margin-left: 1px;
                 margin-right: 1px;
-                text-align: left;
+                font-size: 75%;
             }
         }
     </style>
