--- a/cv.html
+++ b/cv.html
@@ -50,11 +50,18 @@
             margin-left: 400px;
             margin-right: 400px;
         }
-        @media only screen and (max-width: 768px) {
+        @media only screen and (min-width: 600px) and (max-width: 768px) {
+            ul {
+                margin-left: 10px;
+                margin-right: 30px;
+                font-size: 75%;
+            }
+        }
+        @media only screen and (max-width: 600px) {
             ul {
                 margin-left: 0px;
                 margin-right: 0px;
-                font-size: 60%;
+                font-size: 55%;
             }
         }
     </style>
