--- a/cv.html
+++ b/cv.html
@@ -88,7 +88,7 @@
 
     <h3>Technical Proficiencies</h3>
     <ul>
-        <li><b>Programming languages</b>: C/C++, Java, Python, R, FORTRAN, MATLAB and Mathematica</li>
+        <li><b>Programming languages</b>: C/C++, Java, Python, SQL, R, FORTRAN, MATLAB and Mathematica</li>
         <li><b>Markup languages</b>: LaTeX, HTML and CSS</li>
     </ul>
 
