--- a/cv.html
+++ b/cv.html
@@ -78,10 +78,10 @@
     </div>
     <h3>Education</h3>
     <ul>
-        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2018</span></li>
-        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="floatright">2013 - 2015</span></li>
-        <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="floatright">2012 - 2013</span></li>
-        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class="floatright">2008 - 2012</span></li>
+        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2018)</li>
+        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2015)</li>
+        <li><em>Non-degree graduate studies</em>, University of Crete, Greece (2012 - 2013)</li>
+        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece (2008 - 2012)</li>
     </ul>
 
     <hr>
