--- a/cv.html
+++ b/cv.html
@@ -77,12 +77,14 @@
         </p>
     </div>
     <h3>Education</h3>
-    <ul>
-        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2018)</li>
-        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2015)</li>
-        <li><em>Non-degree graduate studies</em>, University of Crete, Greece (2012 - 2013)</li>
-        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece (2008 - 2012)</li>
-    </ul>
+    <div>
+        <ul>
+            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2018)</li>
+            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2015)</li>
+            <li><em>Non-degree graduate studies</em>, University of Crete, Greece (2012 - 2013)</li>
+            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece (2008 - 2012)</li>
+        </ul>
+    </div>
 
     <hr>
 
