--- a/cv.html
+++ b/cv.html
@@ -52,6 +52,7 @@
         }
         @media only screen and (min-width: 600px) and (max-width: 768px) {
             ul {
+                display: inline-block;
                 margin-left: 10px;
                 margin-right: 30px;
                 font-size: 75%;
@@ -59,6 +60,7 @@
         }
         @media only screen and (max-width: 600px) {
             ul {
+                display: inline-block;
                 margin-left: 0px;
                 margin-right: 0px;
                 font-size: 55%;
@@ -89,27 +91,31 @@
     <hr>
 
     <h3>Technical Proficiencies</h3>
-    <ul>
-        <li><b>Programming languages</b>: C/C++, Java, Python, SQL, R, FORTRAN, MATLAB and Mathematica</li>
-        <li><b>Markup languages</b>: LaTeX, HTML and CSS</li>
-    </ul>
+    <div>
+        <ul>
+            <li><b>Programming languages</b>: C/C++, Java, Python, SQL, R, FORTRAN, MATLAB and Mathematica</li>
+            <li><b>Markup languages</b>: LaTeX, HTML and CSS</li>
+        </ul>    
+    </div>
 
     <hr>
 
     <h3>Work/Research experience</h3>
 
-    <ul>
-    <p style="text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
-        <li><em>Principal Research Scientist</em> <span class="floatright">Oct 2022 - Present</span></li>
-        <li><em>Lead Research Scientist</em> <span class="floatright">Oct 2021 - Oct 2022</span></li>
-        <li><em>Senior Modeler</em> <span class="floatright">Mar 2021 - Oct 2021</span></li>
-        <li><em>Modeler</em> <span class="floatright">Aug 2019 - Mar 2021</span></li>
-        <li><em>Associate Modeler</em> <span class="floatright">Nov 2018 - Aug 2019</span></li>
-    <p style="text-align: left;"><b>University of Massachusetts Amherst</b>, MA</p>
-        <li><em>Research Assistant</em> <span class="floatright">Summer 2016</span></li>
-    <p style="text-align: left;"><b>FORTH - IACM</b>, Crete, Greece</p>
-        <li><em>Student Intern</em> <span class="floatright">Summer 2012</span></li>
-    </ul>
+    <div>
+        <ul>
+            <p style="text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
+                <li><em>Principal Research Scientist</em> <span class="floatright">Oct 2022 - Present</span></li>
+                <li><em>Lead Research Scientist</em> <span class="floatright">Oct 2021 - Oct 2022</span></li>
+                <li><em>Senior Modeler</em> <span class="floatright">Mar 2021 - Oct 2021</span></li>
+                <li><em>Modeler</em> <span class="floatright">Aug 2019 - Mar 2021</span></li>
+                <li><em>Associate Modeler</em> <span class="floatright">Nov 2018 - Aug 2019</span></li>
+            <p style="text-align: left;"><b>University of Massachusetts Amherst</b>, MA</p>
+                <li><em>Research Assistant</em> <span class="floatright">Summer 2016</span></li>
+            <p style="text-align: left;"><b>FORTH - IACM</b>, Crete, Greece</p>
+                <li><em>Student Intern</em> <span class="floatright">Summer 2012</span></li>
+        </ul>
+    </div>
 
     <hr>
 
