--- a/cv.html
+++ b/cv.html
@@ -53,6 +53,7 @@
         @media only screen and (min-width: 600px) and (max-width: 768px) {
             ul {
                 display: inline-block;
+                text-align: left;
                 margin-left: 10px;
                 margin-right: 30px;
                 font-size: 75%;
@@ -61,6 +62,7 @@
         @media only screen and (max-width: 600px) {
             ul {
                 display: inline-block;
+                text-align: left;
                 margin-left: 0px;
                 margin-right: 0px;
                 font-size: 55%;
