--- a/cv.html
+++ b/cv.html
@@ -47,6 +47,7 @@
             margin: 1px;
         }
         ul {
+            display: inline-block;
             margin-left: 400px;
             margin-right: 400px;
         }
